--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "74MIN_N0_ARRAY.C": "cpp"
+        "74MIN_N0_ARRAY.C": "cpp",
+        "SECOND_LARGE_NO.ARRAY.C": "cpp"
     }
 }
